[tool.poetry]
name = "popgraph-backend"
version = "0.1.0"
description = "PopGraph 爆款图 - AI 图文一体化生成平台后端服务"
authors = ["PopGraph Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
redis = "^5.0.1"
pillow = "^10.2.0"
httpx = "^0.26.0"
python-multipart = "^0.0.6"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
aioredis = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
hypothesis = "^6.92.0"
httpx = "^0.26.0"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.11"
mypy = "^1.8.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
